--- a/TUNIBot-UI/chatbot_UI.html
+++ b/TUNIBot-UI/chatbot_UI.html
@@ -46,7 +46,7 @@
                 $(document).ready(function()
                 {
 	                $("#submit_button").click(function(){
-					    $.post("localhost:8080",
+					    $.post("http://localhost:8080/msg",
 					    {
 					        "query": text_value
 					    },
