--- a/TUNIBrain/static/chatbot_UI.html
+++ b/TUNIBrain/static/chatbot_UI.html
@@ -60,7 +60,7 @@
                 var cell = row.insertCell(0);
                 var child = document.createElement("div");
 
-                //
+                //Parsitaan paluuviestistä '<html><body>' ja '</html></body>' pois.
                 var str = text;
                 var i;
                 var parsed_text = '';
