--- a/TUNIBrain/static/chatbot_UI.html
+++ b/TUNIBrain/static/chatbot_UI.html
@@ -12,8 +12,9 @@
     </head>
     <body>
 
-        <p id="username">placeholder</p>
-        <button id="activate_chatbot_button" onclick="openChatWindow()">Activate TUNIChat</button>
+        <p id="username">ID placeholder</p>
+        <button id="reset_password_button" onclick="createUsername()">Reset UserID</button>
+        <button id="activate_chatbot_button" onclick="toggleChatWindow()">Activate TUNIChat</button>
 
         <div id="chatbot_frame">
             <div id="banner">
@@ -32,6 +33,8 @@
         
         <script type="text/javascript">
 
+            //lisätään syötekenttään eventlistener kuuntelemaan
+            //submit-buttonin ja enter-painikkeen painalluksia.
             var input = document.getElementById("input_field");
             input.addEventListener("keyup", function(event) {
                 event.preventDefault();
@@ -43,7 +46,9 @@
 
             createUsername();
             bindCallback();
+            showAlphaWarning();
 
+            //funktio luo käyttäjän "puhekuplan" chattiin.
             function createUserChatBubble(text)
             {
                 var table = document.getElementById("chat_content");
@@ -57,6 +62,7 @@
 
             };
 
+            //funktio luo botin "puhekuplan" chattiin.
             function createBotChatBubble(text)
             {
                 var table = document.getElementById("chat_content");
@@ -120,6 +126,7 @@
                 });
             };
 
+            //funktio luo käyttäjätunnuksen
             function createUsername()
             {
 
@@ -156,7 +163,8 @@
                 window.localStorage.setItem("UserID", username);
             };
 
-            function openChatWindow()
+            //funktio piilottaa tai näyttää chatti-ikkunan riippuen klikattavan aktivointipainikkeen tilasta.
+            function toggleChatWindow()
             {
                 var chat_window = document.getElementById("chatbot_frame");
 
@@ -170,6 +178,12 @@
                     document.getElementById("activate_chatbot_button").innerHTML = "Activate TUNIChat";
                     chat_window.style.display = "none";
                 }
+            };
+
+            //funktio avaa chatbot protoversion varoitusikkunan.
+            function showAlphaWarning()
+            {
+                alert( "Warning:\n\nThis is a rough prototype of TUNI chatbot and by no means represents a finalized version of the software.\nThe development is currently ongoing.");
             };
 
         </script>
